--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,29 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+body {
+  font-family: 'Open Sans' ,sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
 .entity {
-  width: 50px;
-  height: 50px;
-  background-color: red;
+  padding: 0.5em;
+  margin: 0.5em;
+  width: 4em;
+  color: #fff;
+  background-color: #f06292;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+}
+
+.is-dragging {
+  box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  filter: opacity(0.75);
 }
 
 .container {
-  width: 200px;
-  height: 100px;
-  background-color: blue;
+  color: #fff;
+  /*text-shadow: #000 1px 1px 1px;*/
+  width: 15em;
+  min-height: 5em;
+  padding: 1em;
+  margin: 1em;
+  background-color: #607d8b;
 }
