--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
 }
 
 .is-dragging {
+  display: none;
   box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   filter: opacity(0.75);
 }
