--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
   width: 4em;
   color: #fff;
   background-color: #f06292;
+  cursor: grab;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
 }
 
